--- a/public/index.html
+++ b/public/index.html
@@ -46,5 +46,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <div class="test">
+      <div class="container">
+        <div class="announce_box footer">
+          <p>©Tout droits reservés 2023</p>
+  
+        </div>
+      </div>
+    </div>
   </body>
 </html>
